package com.lbg.mvvmClean.utils

object TestTags {
    internal const val EMPTY_VIEW: String = "EmptyView"
    internal const val REFRESH_ACTION: String = "RefreshAction"
    internal const val MY_FAVOURITE_TAG: String = "My Favourites"
    internal const val MY_FAVOURITE_SCREEN_TAG: String = "MyFavouriteScreen"
    internal const val CAT_ITEM_TAG: String = "CatListItems"
    internal const val HOME_TAG: String = "Home"
    internal const val HOME_SCREEN_TAG: String = "HomeScreen"
    internal const val APP_NAME: String = "JetPackComposeMVVMCleanArchitect"
    internal const val CAT_SCREEN_APP_BAR: String = "CatAppBAR"
    internal const val TEST_IMAGE_URL: String =
        "https://images.unsplash.com/source-404?fit=crop&fm=jpg&h=800&q=60&w=1200"
    internal const val FULL_SCREEN_APP_BAR: String = "CatFullScreenAppBar"
    internal const val TOGGLE_FAV_BUTTON: String = "ToggleButton"
    internal const val FULL_IMG_DESCRIPTION: String = "FullImage"
    internal const val LIST_IMG: String = "ListImage"
    internal const val CAT_THUMBNAIL_PICTURE: String = "CatThumbnailPicture"
    internal const val LOADING_BAR_TAG: String = "LoadingBarTag"
    internal const val CATS_LIST_TAG: String = "CatsListTag"
    internal const val ACTION_ICON: String = "ActionIcon"
    internal const val BACK_NAVIGATION_ICON_DESCRIPTION: String = "BackNavigationIcon"
    internal const val FAV_ID: Int = 123456
    internal const val IMG_ID: String = "bn45km6"
    internal const val SUB_ID: String = "TestStates"
    internal const val PROGRESS_BAR = "ProgressBar"
}